
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package ArbitrumGovRelay;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/ArbitrumGovRelay";

message Deny {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message Rely {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message TxToL2 {
	google.protobuf.Timestamp ts = 1;
	bytes From = 2;		//	address
	bytes To = 3;		//	address
	bytes SeqNum = 4;		//	uint256
	bytes Data = 5;		//	bytes
}
